# GalLoP-Zoom

./: .gitignore  COLAB_SETUP.md  README.md  check_panels.py  data_download.py  dataset_manifest.json  download_and_survey.py  download_figures.py  localize_panels.py  main.py  pyproject.toml  run_dino_colab.py  run_qwen.py  setup_colab.sh  setup_grounding_dino.sh  setup_qwen.sh  train_gallop.py
benchmark/: README.md  __init__.py  benchmark_gallop.py  benchmark_llava_next.py  benchmark_qwen25_vl.py  benchmark_qwen3_vl.py  data_loader.py  metrics.py  prompts.py  run_all.py
