[project]
name = "gallop-zoom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "datasets>=4.4.1",
    "peft>=0.18.0",
    "qwen-vl-utils>=0.0.14",
    "transformers>=4.46.0",
]
